# lafdup

./: .gitignore  CMakeLists.txt  README.md  _clang-format  configure.ui  discovery.cpp  discovery.h  guide.cpp  guide.h  guide.ui  lafdup.qrc  lafdup_peer.cpp  lafdup_peer.h  lafdup_window.cpp  lafdup_window.h  lafdup_window_p.h  lafdupapplication.cpp  lafdupapplication.h  main.cpp  main.ui  models.cpp  models.h  password.ui  peer.cpp  peer.h  peer_p.h  peers.ui
translations/: lafdup_zh_CN.qm  lafdup_zh_CN.ts
